--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
-Click==7.0
+beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2020.6.20
+chardet==3.0.4
+colorama==0.4.3
+configparser==5.0.0
+crayons==0.4.0
+idna==2.10
+lxml==4.5.2
+requests==2.24.0
+selenium==3.141.0
+soupsieve==2.0.1
+urllib3==1.25.10
+webdriver-manager==3.2.2Click==7.0
 Flask==1.1.1
 gunicorn==19.9.0
 itsdangerous==1.1.0
